--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,12 +1,96 @@
-/* example code for google font
-.bebas-neue-regular {
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-*/
+/* General styles */
 
-.btn {
-    
+body {
+    background-color: white;
+    font-family: "Bebas Neue", sans-serif;
+    text-align: center;
+    color: rgb(40, 40, 40);
+    align-items: center;
 }
 
+/* Heading */
+
+.logo {
+    padding-top: 2rem;
+}
+
+/* Game area */ 
+
+.game-area {
+    width: 75%;
+    background-color: orange;
+    box-sizing: border-box;
+    padding: 2%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* Set score area style */
+.score-area {
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+}
+
+/* General button style */
+.btn {
+    width: 150px;
+    height: 60px;
+    border-radius: 10px;
+    margin: 2%;
+    font-weight: 700;
+}
+
+/* Set color for different game types */
+.dice {
+    background-color: rgb(0, 192, 0);
+    color: black;
+}
+.increasing {
+    background-color: yellow;
+    color: black;
+}
+.lottery {
+    background-color: red;
+    color: black;
+}
+
+ /* Center placeholder text */
+::placeholder {
+    text-align: center;
+}
+
+#guess-number {
+    padding: 1%;
+}
+
+/* Submit button style */
+.btn-submit {
+    margin-top: 1rem;
+    padding: 1rem;
+    background-color: rgb(40, 40, 40);
+    color: 	orange;
+}
+
+.scores {
+    padding: 5px;
+    border: 5px;
+    border-radius: 5px;
+    background-color: rgb(40, 40, 40);
+    color: rgb(253, 165, 0);
+}
+
+.hide {
+    display: none;
+}
+
+/* Meadia query for small screens */
+@media (max-width: 400px) {
+    .logo {
+        width: 75%;
+    }
+
+    .game-area {
+        padding: 5%;
+    }
+}
