--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -14,6 +14,11 @@ body {
     padding-top: 2rem;
 }
 
+/* Username input */
+.username-input {
+    padding: 1rem;
+}
+
 /* Game area */ 
 
 .game-area {
@@ -62,6 +67,7 @@ body {
 
 #guess-number {
     padding: 1%;
+    width: 5rem;
 }
 
 /* Submit button style */
