--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -55,7 +55,7 @@ body {
     background-color: rgb(0, 192, 0);
     color: black;
 }
-.increasing {
+.decreasing {
     background-color: yellow;
     color: black;
 }
