--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -51,11 +51,11 @@ body {
 }
 
 /* Set color for different game types */
-.dice {
+.coin {
     background-color: rgb(0, 192, 0);
     color: black;
 }
-.decreasing {
+.dice {
     background-color: yellow;
     color: black;
 }
@@ -90,9 +90,9 @@ body {
     color: rgb(253, 165, 0);
 }
 
-.hide {
-    display: none;
-}
+/*.hide {
+    /*display: none;*/
+/*}
 
 /* Meadia query for small screens */
 @media (max-width: 400px) {
