--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -23,7 +23,7 @@ body {
     padding: 1rem;
 }
 
-/* Game area */ 
+/* Game area */
 
 .game-area {
     width: 75%;
@@ -56,13 +56,14 @@ body {
     color: black;
     font-size: 200%;
 }
+
 .dice {
     background-color: red;
     color: black;
     font-size: 200%;
 }
 
- /* Center placeholder text */
+/* Center placeholder text */
 ::placeholder {
     text-align: center;
 }
@@ -77,7 +78,7 @@ body {
     margin-top: 1rem;
     padding: 1rem;
     background-color: rgb(40, 40, 40);
-    color: 	orange;
+    color: orange;
 }
 
 .scores {
@@ -88,12 +89,19 @@ body {
     color: rgb(253, 165, 0);
 }
 
-.game-area > .score-board {
-    display: flex;
-    flex-direction: row;
+table {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
-.game-area li {
-    list-style-type: none;
+
+table,
+th {
+    border: 1px solid black;
+}
+
+tr:hover {
+    background-color: white;
 }
 
 .hide {
