readme: insert pictures

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -92,7 +92,7 @@ body {
     border: 5px;
     border-radius: 5px;
     background-color: rgb(40, 40, 40);
-    color: rgb(253, 165, 0);
+    color: orange;
 }
 
 table {
