--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -125,16 +125,16 @@ tr:hover {
 }
 
 .modal {
-    height: 100px;
-    width: 150px;
+    height: 150px;
+    width: 225px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin-left: auto;
     margin-right: auto;
-    background-color: red;
-    border: 1px solid black;
+    background-color: black;
+    border: 1px solid red;
     border-radius: 10px;
     color: white;
     z-index: 99;
@@ -166,6 +166,10 @@ tr:hover {
         flex-direction: column;
         text-align: center;
         justify-content: space-evenly;
+    }
+    .modal {
+        height: 100px;
+        width: 150px;
     }
 }
 
